--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Mi Portfolio</h1>
+        <h1>Mi pagina Web</h1>
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
